# rental-project

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  RUNBOOK.md  TECH_FIX_LOG.txt  TELEGRAM_BOT_SETUP.md  db.sqlite3  docker-compose-test.yml  docker-compose.yml  dockerfile  local_settings.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
apps/: __init__.py
apps/analytics/: __init__.py  urls.py  views.py
apps/bookings/: __init__.py  admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/bookings/application/: __init__.py  command_handlers.py
apps/bookings/domain/: __init__.py  entities.py  events.py  inventory.py
apps/bookings/infrastructure/: __init__.py
apps/bookings/tests/: test_booking_api.py
apps/chat/: models.py
apps/chat/migrations/: 0001_initial.py
apps/favorites/: README.md  __init__.py  models.py  serializers.py  urls.py  views.py
apps/favorites/migrations/: 0001_initial.py  __init__.py
apps/finances/: __init__.py  models.py  serializers.py  services.py  urls.py  views.py
apps/finances/migrations/: 0001_initial.py
apps/notifications/: __init__.py  models.py  serializers.py  services.py  urls.py  views.py
apps/notifications/migrations/: 0001_initial.py  __init__.py
apps/properties/: README.md  __init__.py  admin.py  filters.py  models.py  models_location.py  serializers.py  urls.py  views.py
apps/properties/tests/: test_calendar_api.py  test_property_api.py
apps/reviews/: __init__.py  models.py  serializers.py  urls.py  views.py
apps/reviews/migrations/: 0001_initial.py
apps/telegrambot/: README.md  apps.py  bot.py  models.py  services.py  urls.py  views.py
apps/telegrambot/migrations/: 0001_initial.py
apps/users/: __init__.py  admin.py  auth_serializers.py  auth_urls.py  auth_views.py  models.py  serializers.py  urls.py  views.py
apps/users/api/: README.md  __init__.py  permissions.py  serializers.py  urls.py  views.py
apps/users/migrations/: __init__.py
apps/users/tests/: __init__.py  test_auth_api.py
booking_bot/: __init__.py  asgi.py  celery.py  env_helper.py  middleware.py  settings.py  test_webhook.py  update_webhook.py  urls.py  wsgi.py
booking_bot/bookings/: admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  tests_security.py  urls.py  views.py
booking_bot/bookings/migrations/: 0001_initial.py  0002_booking_kaspi_payment_id_alter_booking_status.py  0002_initial.py  0003_alter_booking_options_booking_cancel_reason_and_more.py  0003_update_user_relations.py
booking_bot/core/: admin.py  apps.py  middleware.py  models.py  security.py  storage.py  views.py
booking_bot/core/migrations/: 0001_initial.py
booking_bot/listings/: admin.py  apps.py  cache.py  filters.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
booking_bot/listings/migrations/: 0001_initial.py  0002_property_digital_lock_code_and_more.py  0002_update_user_relations.py  0003_city_remove_property_region_alter_property_owner_and_more.py  0004_review_reviewphoto.py  0005_remove_propertyphoto_caption_propertyphoto_image_and_more.py  0006_alter_propertyphoto_options_and_more.py  0007_fix_property_class_add_missing_fields.py  0008_calendarday_alter_property_options_and_more.py
booking_bot/notifications/: apps.py  delivery.py  models.py  senders.py  service.py  tasks.py
booking_bot/notifications/migrations/: 0001_initial.py  0002_create_notification_templates.py  0002_update_user_fk.py
booking_bot/notifications/tests/: test_service.py
booking_bot/payments/: __init__.py  admin.py  apps.py  kaspi_service.py  models.py  tests_views.py  urls.py  views.py
booking_bot/payments/migrations/: 0001_initial.py
booking_bot/services/: __init__.py  booking_service.py
booking_bot/telegram_bot/: __init__.py  admin_handlers.py  admin_management.py  admin_property_handlers.py  apps.py  auto_ngrok.py  booking_flow.py  bot_setup.py  constants.py  edit_handlers.py  favorites.py  handlers.py  logic.py  main.py  payment_flow.py  state_flow.py  user_review_handlers.py  utils.py  views.py
booking_bot/telegram_bot/tests/: test_user_flow.py
booking_bot/users/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
booking_bot/whatsapp_bot/: __init__.py  admin_handlers.py  apps.py  constants.py  handlers.py  notifications.py  setup_whatsapp_webhook.py  tasks.py  test_whatsapp_bot.py  tests.py  tests_handlers.py  urls.py  utils.py  views.py
check_logs/: check_logs.py  лог.txt
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  dev.py  prod.py
docs/: 1. Я хочу, чтобы ты выступил в роли опытного технического и продуктового аналитика.docx  2. Анализ проекта ЖильеGO_ Идейный и Технический план.docx  3. MoSCoW-приоритизация функций MVP «ЖильеGO».docx  4. Ключевые метрики успеха MVP «ЖильеGO».docx  5. Персоны и User Stories для «ЖильеGO».docx  6. Конкурентный анализ и уникальное торговое предложение «ЖильеGO».docx  7. Business Model Canvas и Unit-экономика «ЖильеGO».docx  KIMI2.AI - Вот полный __структурированный отчет в Markdown__.md  tgbot23.06.2025  zhiliego-architecture.md  Описание ЖильеГО.txt  малый анализ конкурентов.docx
schemas/: JGO-TZ.docx  JGO_DDD_Architecture.md  JGO_Realtor_cases.md  JGO_SuperAdmin_Cases.md  JGO_Superuser_Cases.md  JGO_User_cases.md  jgo_tz.md  Техническое_задание_ЖильеGO.md
schemas/c4-architecture-diagram/: README.md  c4-Architecture-diagram.puml  c4-CreateBooking-diagram.puml  c4-DomainModel-diagram.puml  c4-architecture-decision-diagram.puml  c4-components-diagram.puml  c4-containers-diagram.puml  c4-contaxt-diagram.puml  c4-deployment-diagram.puml  fsm-booking-status.puml
schemas/codex/: summary.md
scripts/: setup_telegram_webhook.py  start_bot_production.sh
shared/: __init__.py
shared/application/: __init__.py  message_bus.py  uow.py
shared/domain/: __init__.py  base.py  value_objects.py
shared/infrastructure/: __init__.py  encryption.py  fields.py
telegram_bot/: TelegramBot.txt  tgbot.txt
(+16 files in other folders)
